# Kairo

./: .gitignore  Cargo.toml  README.md  run_tests.sh
examples/: my_nft.rs  my_token.rs
src/: erc20.rs  erc721.rs  lib.rs  main.rs
