[package]
name = "kairo"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Team_Oracle"]
repository = "https://github.com/Team-Oracle/kairo"
description = "Production-ready ERC-20 and ERC-721 token library for Arbitrum Stylus"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
dotenv= "0.15.0"
mini-alloc= "0.9.0"
stylus-sdk = "0.9.0"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"]}
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.9.0", features = ["stylus-test"]}

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

# Required for the example binaries
[[example]]
name = "my_token"
path = "examples/my_token.rs"
required-features = ["export-abi"]

[[example]]
name = "my_nft"
path = "examples/my_nft.rs"
required-features = ["export-abi"]

[[bin]]
name = "stylus-erc20"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3
